# dotfile_manager

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: helper.rs  main.rs  winapi.rs
