[package]
name = "dotfile_manager"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = ["crates-io"]
repository = "https://github.com/AzureZee/dotfile_manager"
description = "A Cli-tool to Manage Your Dotfiles with Git Bare Repo"

[[bin]]
name = "dfm"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true
incremental = true

[dependencies]
